// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Type Parser Snapshot Test > Array - Array<T> 1`] = `
{
  "genericArgs": [
    {
      "genericArgs": [],
      "isNullable": false,
      "kind": "typeReference",
      "loc": {
        "column": 22,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "String",
      "originalText": "String",
    },
  ],
  "isNullable": false,
  "kind": "typeReference",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "Array",
  "originalText": "Array<String>",
}
`;

exports[`Type Parser Snapshot Test > Array - T[] 1`] = `
{
  "elementType": {
    "isNullable": false,
    "kind": "string",
    "loc": {
      "column": 16,
      "file": "<virtual>",
      "line": 1,
    },
    "name": "string",
    "originalText": "string",
  },
  "isNullable": false,
  "kind": "array",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "array",
  "originalText": "string[]",
}
`;

exports[`Type Parser Snapshot Test > Complex Array T 1`] = `
{
  "elementType": {
    "isNullable": false,
    "kind": "union",
    "loc": {
      "column": 16,
      "file": "<virtual>",
      "line": 1,
    },
    "name": "union",
    "originalText": "(string | number)",
    "unionTypes": [
      {
        "isNullable": false,
        "kind": "string",
        "loc": {
          "column": 17,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "string",
        "originalText": "string",
      },
      {
        "isNullable": false,
        "kind": "number",
        "loc": {
          "column": 26,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "number",
        "originalText": "number",
      },
    ],
  },
  "isNullable": false,
  "kind": "array",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "array",
  "originalText": "(string | number)[]",
}
`;

exports[`Type Parser Snapshot Test > Complex Union - A | B | undef 1`] = `
{
  "isNullable": true,
  "kind": "union",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "union",
  "originalText": "string | number | undefined",
  "unionTypes": [
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 16,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
    {
      "isNullable": false,
      "kind": "number",
      "loc": {
        "column": 25,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "number",
      "originalText": "number",
    },
  ],
}
`;

exports[`Type Parser Snapshot Test > Complex Union - A | B 1`] = `
{
  "isNullable": false,
  "kind": "union",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "union",
  "originalText": "string | number",
  "unionTypes": [
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 16,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
    {
      "isNullable": false,
      "kind": "number",
      "loc": {
        "column": 25,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "number",
      "originalText": "number",
    },
  ],
}
`;

exports[`Type Parser Snapshot Test > Functions - Optional Parameter 1`] = `
{
  "isNullable": false,
  "kind": "function",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "function",
  "originalText": "(a: string, b: number) => void",
  "parameters": [
    {
      "isOptional": false,
      "isRest": false,
      "loc": {
        "column": 17,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "a",
      "type": {
        "isNullable": false,
        "kind": "string",
        "loc": {
          "column": 20,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "string",
        "originalText": "string",
      },
    },
    {
      "isOptional": false,
      "isRest": false,
      "loc": {
        "column": 28,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "b",
      "type": {
        "isNullable": false,
        "kind": "number",
        "loc": {
          "column": 31,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "number",
        "originalText": "number",
      },
    },
  ],
  "returnType": {
    "isNullable": false,
    "kind": "void",
    "loc": {
      "column": 42,
      "file": "<virtual>",
      "line": 1,
    },
    "name": "void",
    "originalText": "void",
  },
  "typeParams": [],
}
`;

exports[`Type Parser Snapshot Test > Functions - Params: 1, no return 1`] = `
{
  "isNullable": false,
  "kind": "function",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "function",
  "originalText": "(a: string) => void",
  "parameters": [
    {
      "isOptional": false,
      "isRest": false,
      "loc": {
        "column": 17,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "a",
      "type": {
        "isNullable": false,
        "kind": "string",
        "loc": {
          "column": 20,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "string",
        "originalText": "string",
      },
    },
  ],
  "returnType": {
    "isNullable": false,
    "kind": "void",
    "loc": {
      "column": 31,
      "file": "<virtual>",
      "line": 1,
    },
    "name": "void",
    "originalText": "void",
  },
  "typeParams": [],
}
`;

exports[`Type Parser Snapshot Test > Functions - Params: 1, return 1`] = `
{
  "isNullable": false,
  "kind": "function",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "function",
  "originalText": "(a: string) => number",
  "parameters": [
    {
      "isOptional": false,
      "isRest": false,
      "loc": {
        "column": 17,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "a",
      "type": {
        "isNullable": false,
        "kind": "string",
        "loc": {
          "column": 20,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "string",
        "originalText": "string",
      },
    },
  ],
  "returnType": {
    "isNullable": false,
    "kind": "number",
    "loc": {
      "column": 31,
      "file": "<virtual>",
      "line": 1,
    },
    "name": "number",
    "originalText": "number",
  },
  "typeParams": [],
}
`;

exports[`Type Parser Snapshot Test > Functions - Rest Parameter 1`] = `
{
  "isNullable": false,
  "kind": "function",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "function",
  "originalText": "(a: string, ...args:number[]) => number",
  "parameters": [
    {
      "isOptional": false,
      "isRest": false,
      "loc": {
        "column": 17,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "a",
      "type": {
        "isNullable": false,
        "kind": "string",
        "loc": {
          "column": 20,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "string",
        "originalText": "string",
      },
    },
    {
      "isOptional": true,
      "isRest": true,
      "loc": {
        "column": 28,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "args",
      "type": {
        "elementType": {
          "isNullable": false,
          "kind": "number",
          "loc": {
            "column": 36,
            "file": "<virtual>",
            "line": 1,
          },
          "name": "number",
          "originalText": "number",
        },
        "isNullable": false,
        "kind": "array",
        "loc": {
          "column": 36,
          "file": "<virtual>",
          "line": 1,
        },
        "name": "array",
        "originalText": "number[]",
      },
    },
  ],
  "returnType": {
    "isNullable": false,
    "kind": "number",
    "loc": {
      "column": 49,
      "file": "<virtual>",
      "line": 1,
    },
    "name": "number",
    "originalText": "number",
  },
  "typeParams": [],
}
`;

exports[`Type Parser Snapshot Test > Generics - Map<K, V> 1`] = `
{
  "genericArgs": [
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 20,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
    {
      "isNullable": false,
      "kind": "number",
      "loc": {
        "column": 28,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "number",
      "originalText": "number",
    },
  ],
  "isNullable": false,
  "kind": "typeReference",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "Map",
  "originalText": "Map<string, number>",
}
`;

exports[`Type Parser Snapshot Test > Generics - Promise<T> 1`] = `
{
  "genericArgs": [
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 24,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
  ],
  "isNullable": false,
  "kind": "typeReference",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "Promise",
  "originalText": "Promise<string>",
}
`;

exports[`Type Parser Snapshot Test > Primitives - Bool 1`] = `
{
  "isNullable": false,
  "kind": "boolean",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "boolean",
  "originalText": "boolean",
}
`;

exports[`Type Parser Snapshot Test > Primitives - Number 1`] = `
{
  "isNullable": false,
  "kind": "number",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "number",
  "originalText": "number",
}
`;

exports[`Type Parser Snapshot Test > Primitives - String 1`] = `
{
  "isNullable": false,
  "kind": "string",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "string",
  "originalText": "string",
}
`;

exports[`Type Parser Snapshot Test > Primitives - void 1`] = `
{
  "isNullable": false,
  "kind": "void",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "void",
  "originalText": "void",
}
`;

exports[`Type Parser Snapshot Test > Type References - basic 1`] = `
{
  "genericArgs": [],
  "isNullable": false,
  "kind": "typeReference",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "HTMLElement",
  "originalText": "HTMLElement",
}
`;

exports[`Type Parser Snapshot Test > Union - String? 1 1`] = `
{
  "isNullable": true,
  "kind": "string",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "string",
  "originalText": "string | null",
}
`;

exports[`Type Parser Snapshot Test > Union - String? 2 1`] = `
{
  "isNullable": true,
  "kind": "string",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "string",
  "originalText": "string | undefined",
}
`;

exports[`Type Parser Snapshot Test > Union - String? 3 1`] = `
{
  "isNullable": true,
  "kind": "string",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "string",
  "originalText": "string | null | undefined",
}
`;

exports[`Type Parser Snapshot Test > tuple - [A, A, A] 1`] = `
{
  "isNullable": false,
  "kind": "tuple",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "tuple",
  "originalText": "[string, string, string]",
  "tupleTypes": [
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 17,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 25,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 33,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
  ],
}
`;

exports[`Type Parser Snapshot Test > tuple - [A, B] 1`] = `
{
  "isNullable": false,
  "kind": "tuple",
  "loc": {
    "column": 16,
    "file": "<virtual>",
    "line": 1,
  },
  "name": "tuple",
  "originalText": "[string, number]",
  "tupleTypes": [
    {
      "isNullable": false,
      "kind": "string",
      "loc": {
        "column": 17,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "string",
      "originalText": "string",
    },
    {
      "isNullable": false,
      "kind": "number",
      "loc": {
        "column": 25,
        "file": "<virtual>",
        "line": 1,
      },
      "name": "number",
      "originalText": "number",
    },
  ],
}
`;
